platforms/ng-era-platforms/ng-cross-era-platforms/meta/semantic-core/deployments/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    eco-base/audit-log-level: minimal
    eco-base/governance-policy: standard-v1
    eco-base/uri: eco-base://k8s/core/service/gl-spec-core-service
    eco-base/urn: urn:eco-base:k8s:core:service:gl-spec-core-service:sha256-5a547ed18a0be20c03b8779cbd28f2545d4ebac8bd275c781c4a1cbf0cd39888
    prometheus.io/port: '9091'
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: spec-core
    app.kubernetes.io/part-of: eco-base
    app.kubernetes.io/version: 1.0.0
    eco-base/environment: development
    eco-base/governance: aligned
    eco-base/owner: eco-system
    eco-base/part-of: eco-base
    eco-base/platform: core
    gl.service/semantic.core: 'true'
    platform: gl-platform-services
  name: gl-spec-core-service
  namespace: gl-platform-spec-core
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: grpc
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: metrics
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app.kubernetes.io/name: spec-core
    version: v1.0.0
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    eco-base/audit-log-level: minimal
    eco-base/governance-policy: standard-v1
    eco-base/uri: eco-base://k8s/core/service/gl-spec-core-external
    eco-base/urn: urn:eco-base:k8s:core:service:gl-spec-core-external:sha256-0771673eea7ea34f1a736c8962f19944eee013f58ebae6d2c7ab71d059e21c72
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: alb
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: spec-core-external
    app.kubernetes.io/part-of: eco-base
    app.kubernetes.io/version: 1.0.0
    eco-base/environment: development
    eco-base/governance: aligned
    eco-base/owner: eco-system
    eco-base/part-of: eco-base
    eco-base/platform: core
    platform: gl-platform-services
  name: gl-spec-core-external
  namespace: gl-platform-spec-core
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: spec-core
    version: v1.0.0
  type: LoadBalancer
