platforms/ng-era-platforms/ng-cross-era-platforms/meta/semantic-core/deployments/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    eco-base/audit-log-level: minimal
    eco-base/governance-policy: standard-v1
    eco-base/uri: eco-base://k8s/core/ingress/gl-spec-core-ingress
    eco-base/urn: urn:eco-base:k8s:core:ingress:gl-spec-core-ingress:sha256-a38a99cf2e055532ea4649849a52b4e762049cfcd707ac24a766e55dadebdfe6
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: 'more_set_headers "ECO-Platform:
      spec-core";

      more_set_headers "ECO-Version: v1.0.0";

      '
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: spec-core
    app.kubernetes.io/part-of: eco-base
    app.kubernetes.io/version: 1.0.0
    eco-base/environment: development
    eco-base/governance: aligned
    eco-base/owner: eco-system
    eco-base/part-of: eco-base
    eco-base/platform: core
    platform: gl-platform-services
  name: gl-spec-core-ingress
  namespace: gl-platform-spec-core
  nginx.ingress.kubernetes.io/cors-allow-headers: DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,ECO-Platform,ECO-Version
  nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, DELETE, OPTIONS
  nginx.ingress.kubernetes.io/cors-allow-origin: '*'
  nginx.ingress.kubernetes.io/enable-cors: 'true'
  nginx.ingress.kubernetes.io/limit-connections: '1000'
  nginx.ingress.kubernetes.io/limit-rps: '100'
  nginx.ingress.kubernetes.io/rewrite-target: /$2
  nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: spec-core.gl-enterprise-architecture.example.com
    http:
      paths:
      - backend:
          service:
            name: gl-spec-core-service
            port:
              number: 80
        path: /semantic(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: gl-spec-core-service
            port:
              number: 80
        path: /health
        pathType: Exact
      - backend:
          service:
            name: gl-spec-core-service
            port:
              number: 9091
        path: /metrics
        pathType: Exact
  - host: api.semantic.gl.example.com
    http:
      paths:
      - backend:
          service:
            name: gl-spec-core-service
            port:
              number: 80
        path: /v1(/|$)(.*)
        pathType: Prefix
